Fix ASTUCES section IE9 layout

--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -61,7 +61,8 @@
     margin-left: 4.5%
 
   .row--mob.row--centered
-    margin-left: -24.5%
+    margin: 0 auto
+    float: none
 
   .astuces
     border-top: 2px solid $lightGray
