--- a/sass/master.css
+++ b/sass/master.css
@@ -50,7 +50,8 @@
   .row--clipped--left {
     margin-left: 4.5%; }
   .row--mob.row--centered {
-    margin-left: -24.5%; }
+    margin: 0 auto;
+    float: none; }
   .astuces {
     border-top: 2px solid #f6f6f6; } }
 
